# python-courses

./: .gitattributes  .gitignore  .gitmodules  LIESMICH.md  README.md  cam-basic.yaml  cam.yaml  my_main.py  py-3.7.yaml  requirements.txt  simple.yaml  var_getter.py
De/Codealong/: my_test_module.ipynb  topic_000_playground.ipynb  topic_010_getting_started.ipynb  topic_030_rapid_start.ipynb  topic_040_quickstart.ipynb  topic_050_introduction_part1a.ipynb  topic_055_introduction_part2a.ipynb  topic_060_introduction_part3a.ipynb  topic_065_introduction_part4a.ipynb  topic_070_more_strings_and_sorting.ipynb  topic_072_regular_expressions.ipynb  topic_080_namespaces.ipynb  topic_080_namespaces_and_closures.ipynb  topic_090_control_structures.ipynb  topic_100_lists_part2.ipynb  topic_110_identity.ipynb  topic_120_tuples.ipynb  topic_130_dictionaries.ipynb  topic_150_iteration.ipynb  topic_160_comprehension.ipynb  topic_180_classes.ipynb  topic_190_inheritance.ipynb  topic_200_exceptions.ipynb  topic_210_generators.ipynb  topic_210_iterators.ipynb  topic_215_coroutines.ipynb  topic_220_advanced_data_model.ipynb  topic_230_files.ipynb  topic_240_modules_and_packages.ipynb  topic_245_pickling.ipynb  topic_250_context_managers.ipynb  topic_270_command_line_arguments.ipynb  topic_280_setuptools_and_installation.ipynb  topic_300_external_programs.ipynb  topic_310_xml.ipynb  topic_350_decorators.ipynb  topic_400_programming_paradigms.ipynb  topic_410_concurrency.ipynb  topic_420_multiprocessing_part1.ipynb  topic_420_multiprocessing_part2.ipynb  (+7 more)
De/Slides/: my-data-file.txt  my_test_module.ipynb  playground.ipynb  topic_000_playground.ipynb  topic_010_getting_started.ipynb  topic_030_rapid_start.ipynb  topic_040_quickstart.ipynb  topic_050_introduction_part1a.ipynb  topic_055_introduction_part2a.ipynb  topic_060_introduction_part3a.ipynb  topic_065_introduction_part4a.ipynb  topic_070_more_strings_and_sorting.ipynb  topic_072_regular_expressions.ipynb  topic_080_namespaces.ipynb  topic_080_namespaces_and_closures.ipynb  topic_090_control_structures.ipynb  topic_100_lists_part2.ipynb  topic_110_identity.ipynb  topic_120_tuples.ipynb  topic_130_dictionaries.ipynb  topic_150_iteration.ipynb  (+31 more)
Examples/: CMakeLists.txt
Examples/CppBindingExample/cpp_lib/: CMakeLists.txt
Examples/CppBindingExample/cpp_lib/include/: cpp_lib.hpp
Examples/CppBindingExample/cpp_lib/src/: cpp_lib.cpp
Examples/CppBindingExample/cpp_lib/test/: CMakeLists.txt  cpp.hint  cpp_test.cpp
Examples/CppVsPython/Python/: README.md  setup.cfg
Examples/CppVsPython/Python/calc/: __main__.py
Examples/CppVsPython/Python/calc/operations/: base.py
Examples/CppVsPython/Python/tests/: main_test.py
Examples/EchoClient/: README.md  setup.cfg
Examples/EchoClient/echo_client/: __main__.py
Examples/EchoClientStarterKit/: README.md  setup.cfg
Examples/EchoClientStarterKit/echo_client_sk/: __main__.py
Examples/EchoServerStarterKit/: README.md  setup.cfg
Examples/EchoServerStarterKit/echo_server_sk/: __main__.py
Examples/ExternalSampleApplication/: README.md  setup.cfg
Examples/ExternalSampleApplication/ext_sample_app/: __main__.py
Examples/ExternalSampleApplication/tests/: main_test.py
Examples/LoggingExample/: README.md  setup.cfg
Examples/LoggingExample/logex/: __main__.py
Examples/MultipleChoice/: README.md  answers.jsonl  setup.cfg
Examples/MultipleChoice/multiplechoice/: __main__.py  questionnaire.py
Examples/MultipleChoice/multiplechoice/tests/: questionnaire_test.py
Examples/MultipleChoiceStarterKit/: LICENSE  questions.json  setup.cfg
Examples/MultipleChoiceStarterKit/multiplechoice_sk/: __main__.py  formatter.py  questionnaire.py
Examples/MultipleChoiceStarterKit/multiplechoice_sk/tests/: formatter_test.py  questionnaire_test.py
Examples/NamespacePackage/SplitPackage1/: README.md  setup.cfg
Examples/NamespacePackage/SplitPackage1/splitpackage/: part1.py
Examples/NamespacePackage/SplitPackage1/splitpackage/subpackage1/: __init__.py  submodule.py
Examples/NamespacePackage/UsePackage/: README.md  setup.cfg
Examples/NamespacePackage/UsePackage/usepackage/: __main__.py
Examples/NamespacePackage/UsePackage/usepackage/tests/: main_test.py
Examples/Othellite/: README.md  setup.cfg
Examples/Othellite/othellite/: direction.py  field.py  game.py  game_result.py  notifier.py  player_color.py  position.py
Examples/Othellite/othellite/board/: __init__.py  board.py  field_based_board.py  list_board.py  numpy_board.py
Examples/Othellite/othellite/cli/: __main__.py
Examples/Othellite/othellite/gui/: __main__.py
Examples/Othellite/othellite/player/: __init__.py  interactive_player.py  player.py  random_player.py
Examples/Othellite/othellite/tests/: direction_test.py  field_test.py  player_color_test.py  position_test.py
Examples/Othellite/othellite/tests/board_tests/: board_test.py  list_board_test.py  numpy_board_test.py
Examples/Othellite/src/othellite/: __init__.py  board.py  cli.py  core.py  game.py  gui.py  player.py
Examples/Othellite/test/othellite/: test_doubles.py
Examples/Othellite/test/othellite/board_tests/: board_reader_test.py  board_test.py  list_board_test.py  numpy_board_test.py
Examples/Othellite/test/othellite/core_tests/: direction_test.py  field_test.py  notifier_test.py  player_color_test.py  position_test.py  score_test.py
Examples/Othellite/tests/: direction_test.py  field_test.py  player_color_test.py  position_test.py
Examples/Othellite/tests/board/: board_test.py  list_board_test.py  numpy_board_test.py
Examples/RpgDice/: README.md  setup.cfg
Examples/RpgDice/rpgdice/: __main__.py  dice.py  dice_test.py
Examples/RpgDice/rpgdice/tests/: dice_test.py  main_test.py
Examples/ShoppingCartStarterKit/: README.md  setup.cfg
Examples/ShoppingCartStarterKit/shoppingcart_sk/: __main__.py
Examples/ShoppingCartStarterKit/shoppingcart_sk/tests/: main_test.py
Examples/TodoList/: README.md  setup.cfg
Examples/TodoList/todos/: __main__.py  todo_item.py  todo_list.py
Examples/TodoList/todos/test/: test_todo_item.py  test_todo_list.py
(+1330 files in other folders)
