[metadata]
name = echo_server_sk
version = 0.0.1
author = Dr. Matthias Hoelzl
author_email = tc@xantira.com
description = A simple echo server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/python-programmierer
project_urls =
    Bug Tracker = https://github.com/hoelzl/python-programmierer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.75.1
    uvicorn>=0.17.6
