[metadata]
name = ext_sample_app
version = 0.0.1
author = Dr. Matthias Hoelzl
author_email = tc@xantira.com
description = An example for showing how external applications can be controlled from Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/python-programmierer/ext_sample_app
project_urls =
    Bug Tracker = https://github.com/hoelzl/python-programmierer/ext_sample_app/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    typer>=0.4.0


[options.entry_points]
console_scripts:
    ext-sample-app = ext_sample_app.__main__:app