[metadata]
name = logex
version = 0.0.1
author = Dr. Matthias Hoelzl
author_email = tc@xantira.com
description = An example for logging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/python-programmierer/logex
project_urls =
    Bug Tracker = https://github.com/hoelzl/python-programmierer/logex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    typer>=0.4.0


[options.entry_points]
console_scripts:
    logex = logex.__main__:app