[metadata]
name = othellite
version = 0.0.1

author = Matthias Hölzl
author_email = tc@xantira.com
description = Example project for Python courses
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/python-programmierer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts:
    othellite-cli = othellite.cli.__main__:app
    othellite-gui = othellite.gui.__main__:main
