[metadata]
name = othellite
version = 0.2.0

author = Matthias Hölzl
author_email = tc@xantira.com
description = Example project for Python courses
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/python-courses
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    othellite-cli = othellite.cli:app
    othellite-gui = othellite.gui:main
