[metadata]
name = shoppingcart_sk
version = 0.0.1
author = Dr. Matthias Hoelzl
author_email = tc@xantira.com
description = Starter kit for the shopping cart project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/python-programmierer/shoppingcart_sk
project_urls =
    Bug Tracker = https://github.com/hoelzl/python-programmierer/shoppingcart_sk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    typer>=0.4.0


[options.entry_points]
console_scripts:
    shoppingcart-sk = shoppingcart_sk.__main__:app