[metadata]
name = splitpackage_part1
version = 0.0.1
author = Dr. Matthias Hoelzl
author_email = tc@xantira.com
description = Example for a split import package (part 1)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/splitpackage
project_urls =
    Bug Tracker = https://github.com/hoelzl/splitpackage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.9
